Adding files to the repo

--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
 
           <form>
               <input type="text" name="user"  id="user" placeholder="Apple ID" autofocus>
-              <a href="app.html" class="login">hola</a>
+              <a href="app.html" class="login"></a>
           </form>
 
           <div class="remember-password">
